objects/Geographical_Info__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>County Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapped_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mapped Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_Area__c</fullName>
        <label>Rating Area</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SearchField__c</fullName>
        <formula>Zipcode__c  &amp;&quot; - &quot;&amp;  County_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SearchField</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selling_State__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selling State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Area__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Area</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Zip_State_County__c</fullName>
        <formula>State__c + &apos;-&apos; + County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech Zip State County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Zipcode_State__c</fullName>
        <formula>State__c +&apos; - &apos;+  Zipcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech Zipcode State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zipcode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Geographical Info</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Zipcode__c</columns>
        <columns>County__c</columns>
        <columns>State__c</columns>
        <columns>Mapped_Code__c</columns>
        <columns>Rating_Area__c</columns>
        <columns>County_Code__c</columns>
        <columns>Service_Area__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Specific_Zip_Code</fullName>
        <columns>Zipcode__c</columns>
        <columns>County__c</columns>
        <columns>State__c</columns>
        <columns>Mapped_Code__c</columns>
        <columns>Rating_Area__c</columns>
        <columns>County_Code__c</columns>
        <columns>Service_Area__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Specific Zip Code</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geographical Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>